@@ -1,7 +1,10 @@
 package priv.zhou.common.tools;
 
+import org.apache.tomcat.util.codec.binary.Base64;
 import sun.misc.BASE64Decoder;
 import sun.misc.BASE64Encoder;
+
+import java.nio.charset.StandardCharsets;
 
 /**
  * Base64加解密工具类
@@ -11,11 +14,28 @@ import sun.misc.BASE64Encoder;
  */
 public class Base64Util {
 
-    public static byte[] decode(String key) throws Exception {
-        return null == key ? null : new BASE64Decoder().decodeBuffer(key);
+    public static String decodeToStr(String base64) {
+        return new String(decode(base64));
     }
 
-    public static String encode(byte[] key) {
-        return null == key ? null : new BASE64Encoder().encodeBuffer(key);
+    public static byte[] decode(String base64) {
+        return Base64.decodeBase64(base64);
     }
+
+    public static String encodeToStr(String data) {
+        return new String(encode(data));
+    }
+
+    public static byte[] encode(String data) {
+        return encode(data.getBytes(StandardCharsets.UTF_8));
+    }
+
+    public static String encodeToStr(byte[] data) {
+        return new String(encode(data));
+    }
+
+    public static byte[] encode(byte[] data) {
+        return Base64.encodeBase64(data);
+    }
+
 }
